Agregado validaciones en cliente y servidor para el formulario de trabajadores.

--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -128,7 +128,9 @@
     <Compile Include="Enums\CategoriaPlanilla.cs" />
     <Compile Include="Enums\Estado.cs" />
     <Compile Include="Enums\FormatoArchivo.cs" />
+    <Compile Include="Enums\RegimenPensionario.cs" />
     <Compile Include="Enums\TipoConcepto.cs" />
+    <Compile Include="Enums\TipoDocumentoIdentidad.cs" />
     <Compile Include="Helpers\Formats.cs" />
     <Compile Include="Enums\Operacion.cs" />
     <Compile Include="Enums\Vinculo.cs" />
