--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Procedures\USP_I_RegistrarMeta.cs" />
     <Compile Include="Procedures\USP_S_ListarCategoriaPlanillaGeneradaPorTrabajador.cs" />
     <Compile Include="Procedures\USP_S_ListarConceptosGeneradosPorategoriaYTrabajador.cs" />
+    <Compile Include="Procedures\USP_S_ListarDetallePlanillaTrabajador.cs" />
     <Compile Include="Procedures\USP_S_ListarResumenSIAF.cs" />
     <Compile Include="Procedures\USP_S_ListarResumenPorActividadYDependencia.cs" />
     <Compile Include="Procedures\USP_S_ListarTrabajadoresConPlanilla.cs" />
