Agregado carga masiva de trabajadores nuevos.

--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Entities\ConceptoEntity.cs" />
     <Compile Include="Entities\ConceptoAsignadoPlantillaDTO.cs" />
     <Compile Include="Entities\ConceptoGeneradoDTO.cs" />
+    <Compile Include="Entities\DedicacionDocenteDTO.cs" />
     <Compile Include="Entities\DepActividadMetaDTO.cs" />
     <Compile Include="Entities\DepActividadMetaEntity.cs" />
     <Compile Include="Entities\DependenciaEntity.cs" />
@@ -152,6 +153,7 @@
     <Compile Include="Services\ICategoriaPlanillaService.cs" />
     <Compile Include="Services\ICategoriaPresupuestalService.cs" />
     <Compile Include="Services\IConceptoService.cs" />
+    <Compile Include="Services\IDedicacionDocenteService.cs" />
     <Compile Include="Services\IDepActividadMetaService.cs" />
     <Compile Include="Services\IGeneracionArchivoService.cs" />
     <Compile Include="Services\IGrupoOcupacionalService.cs" />
@@ -172,6 +174,7 @@
     <Compile Include="Services\Implementations\CategoriaPlanillaService.cs" />
     <Compile Include="Services\Implementations\CategoriaPresupuestalService.cs" />
     <Compile Include="Services\Implementations\ConceptoService.cs" />
+    <Compile Include="Services\Implementations\DedicacionDocenteService.cs" />
     <Compile Include="Services\Implementations\DepActividadMetaService.cs" />
     <Compile Include="Services\Implementations\DependenciaService.cs" />
     <Compile Include="Services\Implementations\DocenteService.cs" />
